--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ body{
     display: flex;
     flex-direction: column;
     /* transform: translateY(8%); */
+    padding-top: 150px;
 }
 
 .logo{
@@ -80,13 +81,17 @@ body{
 
 } 
 
-
-
-/* container_1 */
-
-
-#container_1_2{
+#heading{
     background: #f5f5f5;
+}
+
+
+/* container_2 */
+
+
+#container_2{
+    background: #f4f4f4;
+
 }
 
 .bold{
@@ -96,46 +101,293 @@ body{
 .line{
     border: 0;
     border-bottom: 2px solid #ebebeb;
+    
 }
-.head-container_1_2 h2{
+
+.head-container_block{
+    padding-bottom: 20px;
+}
+
+.head-container_block h2{
     font-size: 60px;
     color: #022635;
     text-transform: uppercase;
 }
 
-.head-container_1_2 p{
+
+.head-container_block p{
     font-size: 30px;
     color: #898989;
     line-height: 1.3em;
+    margin: 0;
 }
 
-.head-container_1_2_text{
-    padding-bottom: 20px;
-}
 
 .head_block2{
-    width: 800px;
+    width: 70%;
     margin: 0 auto;
     padding-top: 50px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 150px;
    
 }
 
-.head_block2_item{
-    margin: 0;
+.head_block2 img{
+
+    width: 100%;
+}
+
+
+/* container_3 */
+
+#container_3{
+    background: url(../img/фон_таб.png) no-repeat center top / cover;
+
+}
+
+.tablet{
+    width: 100%;
+    /* height: 100%; */
+    padding-bottom: 250px;
+}
+
+/* container_4 */
+#container_4{
+    background: url(../img/фон_мобі.png) no-repeat center top / cover;
+    
+}
+
+.devices{
+    display: flex;
+}
+
+.block_one{
+    display: flex;
+    flex-direction: column;
     padding: 0;
+    margin: 0;
+    width: 50%;
+    /* padding-top: 100px; */
+    padding-right: 20px;
+}
+
+
+.block_ipad img{
+    width: 100%;
+}
+
+
+.block_iphone{
+    display: flex;
+    height: 600px;
+    padding-top: 100px;
+    /* padding-bottom: 100px;*/
+    justify-content: space-between;
+}
+
+.iphone_one{
+    width: 40%;
+    align-self: flex-end;
+    margin-left: 50px;
+
+}
+
+.iphone_one img{
+    width: 100%;
+}
+
+
+.iphone_two{
+    width: 40%;
+    
+   
+}
+
+.iphone_two img{
+    width: 100%;
+    
 }
 
 
 
-#container_end_pic{
-    background: url(../img/Фон.png) no-repeat center top / cover;
+.block_second{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    padding: 0;
+    margin: 0;
+    padding-left: 20px;
+    
 }
 
-.bg{
-    width: 800px;
+
+.block_iphone_second{
+    display: flex;
+   
+    height: 600px;
+    
+    /* padding-bottom: 100px;*/
+    justify-content: space-between;
+}
+
+
+.iphone_three{
+    width: 40%;
+    align-self: flex-end;
+    padding-left: 30px;
+}
+
+.iphone_three img{
+    width: 100%;
+    
+   
+}
+
+
+.iphone_four{
+    width: 40%;
+    position: relative;
+    top: -25%;
+   
+    
+}
+
+.iphone_four img{
+    width: 100%;
+}
+
+
+/* container_5 */
+
+#container_5{
+    background: url(../img/фон_айфон.png) no-repeat center top / cover;
+}
+
+.mobi{
     margin: 0 auto;
-    padding-bottom: 25em;
+    width: 80%;
+    padding-top: 60px;
+    padding-bottom: 150px;
+   
 }
+
+.mobi img{
+    width: 100%;
+}
+
+
+/* container_6 */
+
+#container_6{
+    background: #96c73a;
+}
+
+
+.franch{
+    width: 100%;
+    margin: 0 auto;
+    padding-bottom: 0;
+}
+
+.franch img{
+    width: 100%;
+}
+
+/* container_7 */
+#container_7{
+    background: #022635;
+}
+
+.type{
+    color: #fefefe;
+}
+
+.type h2{
+    font-size: 3em;
+    text-transform: uppercase;
+}
+
+.type p{
+    font-size: 1.1em;
+}
+
+
+.type_block{
+    display: flex;
+    font-size: 1.4em;
+    color: #fefefe;
+    justify-content: space-between;
+}
+
+.type_block p{
+    color: #96c73a;
+}
+
+.type_one{
+    font-weight: bold;
+}
+
+
+.type_second{
+    position: relative;
+    right: 10%; 
+}
+
+.type_second h3{
+    font-weight: 300;
+}
+
+
+.types{
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
+
+/* container_8 */
+
+#container_8{
+    background: #659f4a;
+}
+
+.foot  {
+    width: 40%;
+    margin: 0 auto;
+    text-align: center;
+    color: #fefefe;
+    padding-top: 100px;
+    padding-bottom: 70px;
+}
+
+.foot h3{
+    text-transform: uppercase;
+    font-size: 1.5em;
+    margin: 0;
+    line-height: 1.6em;
+    padding-top: 15px;
+}
+
+.foot p{
+    margin: 0;
+    line-height: 1.3em;
+}
+
+.text_foot{
+    text-transform: uppercase;
+    font-size: 0.8em;
+    margin: 0;
+    
+}
+
+.foot_line{
+    border: 0;
+    border-bottom: 2px solid #c4daba;
+    padding: 10px;
+}
+
+
+
+
 
 
 
